--- a/README
+++ b/README
@@ -2,11 +2,11 @@ Copyright (C) 2003 Dale Mellor                        -*-text-*-
 See the end for copying conditions.
 
 
-This is version 0.99.3 of the mcron program (the third 1.0.0 release
-candidate), designed and written by Dale Mellor, which replaces and hugely
-enhances Vixie cron. It is functionally complete, production quality code (did
-you expect less?), but has not received much testing yet. It has only been built
-on a GNU/Linux system, and will most likely fail on others (but you never
+This is version 1.0.0 of the mcron program, and is the first release as part of
+the GNU system. It is designed and written by Dale Mellor, and replaces and
+hugely enhances Vixie cron. It is functionally complete, production quality code
+(did you expect less?), but has not received much testing yet. It has only been
+built on a GNU/Linux system, and will most likely fail on others (but you never
 know...).
 
 
@@ -15,8 +15,8 @@ IMPORTANT NOTICES
 
 Read the BUGS file.
 
-Do not (yet) install this software on a machine which relies for its functioning
-on its current set of crontabs.
+Do not (yet) install this software on a machine which relies for its
+functioning on its current set of crontabs.
 
 The package must be installed by root.
 
@@ -24,41 +24,49 @@ Before installing this package for the first time, it is necessary to terminate
 any running cron daemons on your system. If your old cron is not Vixie or
 accurately Vixie compatible (files in /var/cron/tabs*, /var/cron/allow,
 /var/cron/deny, /etc/crontab, /var/run/cron.pid) then you will need to clear out
-all old crontabs and make new ones afresh.
+all old crontabs and make new ones afresh - or else look very carefully at the
+options you pass to the package configure script, as follows.
+
+It is often the case that GNU/Linux distributions and other Unices hacked the
+cron daemon to use different directories to those above. You can use configure
+options --spool-dir, --socket-file, --allow-file, --deny-file, --pid-file and
+--tmp-dir to make mcron behave similarly. Note that, with the exception of
+tmp-dir, none of these files or directories should be accessible by ordinary
+(non-root) users.
 
 If your old cron is Vixie, or very similar, mcron should fall right into place
-where your old cron was (the binaries cron and crontab will be replaced), and
-you should be able to continue to use your existing crontabs without noticing
-any changes. Bear in mind that if you use /etc/crontab, then changes to this
-file will *not* take immediate effect (this is the 1% incompatibility between
-mcron and Vixie cron); you may want to add a comment to this file with a note to
-this effect. Alternatively, use the new mcron program, it's better!
+where your old cron was (the binaries cron and crontab will be replaced, but if
+your existing system has a binary called crond, you should make this a link
+to mcron), and you should be able to continue to use your existing crontabs
+without noticing any changes.
 
-If you don't want to clobber your existing cron executables, you can specify the
---program-prefix option to configure with a prefix ending in a non-alphabetic
-character, for example "m.", and then run the programs as m.mcron, m.cron and
-m.crontab.
+If you don't want to clobber your existing cron executables, you can specify
+the --program-prefix option to configure with a prefix ending in a
+non-alphabetic character, for example "m.", and then run the programs as
+m.mcron, m.cron (or m.crond) and m.crontab.
 ----------------------------------------------------------------------
 
 
 See the file INSTALL for generic building and installation instructions.
 
-After installation, read the info file for full instructions for use (type
-`info mcron' at the command line). Notes for end users, sysadmins, and
-developers who wish to incorporate mcron into their own programs are included
-here.
+After installation, read the info file for full instructions for use (typing
+`info mcron' at the command line should suffice). Notes for end users,
+sysadmins, and developers who wish to incorporate mcron into their own programs
+are included here.
 
 Known bugs are noted in the BUGS file, and features which might be implemented
 sometime sooner or later are noted in the TODO file.
 
-Please send all other bug reports either via Savannah (preferred) at
-   https://savannah.nongnu.org/bugs/?func=addbug&group=mcron
-or else by electronic mail to:
-   dale_mellor@users.sourceforge.net
+Please send all other bug reports to bugs-mcron@gnu.org. Other mailing lists you
+could subscribe to are help-mcron@gnu.org (for help and advice from the
+community, including the author) and info-mcron@gnu.org (for news as it
+happens).
 
 Mcron is free software. See the file COPYING for copying conditions.
 
-The mcron development home page is at http://www.nongnu.org/mcron.
+The mcron development home page is at http://www.gnu.org/software/mcron (also
+temporarily at http://rdmp.org/mcron), and can be obtained from
+ftp://ftp.gnu.org/mcron (or temporarily from ftp://rdmp.org/mcron).
 
 
 
