Noted release of version 1.0.2.

--- a/NEWS
+++ b/NEWS
@@ -6,6 +6,10 @@ See the end for copying conditions.
 Please send bug reports to bug-mcron@gnu.org.
 
 
+Monday, 2nd January 2006
+    Released version 1.0.2.
+
+
 Saturday, 15th May 2004
     Set up Savannah and the mailing lists so that we are now homed properly at
     gnu.org. Released version 1.0.1 to reflect this, with CVS tag release_1-0-1
