--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,17 @@
-2008-02-21  Dale Mellor  <Dale Mellor <dale_mellor@users.sourceforge.net>
+2010-06-13  Dale Mellor <dale_mellor@users.sourceforge.net>
+
+	* configure.ac: added --enable-no-vixie-clobber argument to
+	configure so that the root user can avoid overwriting a legacy
+	cron installation.
+
+	* mcron.1: added simple, minimal man page using help2man (the
+	texinfo file is still the primary documentation source).
+
+	* makefile.am: replaced use of mkinstalldirs with install; the
+	former is not supplied with the latest automake (1.11).
+
+
+2008-02-21  Dale Mellor <dale_mellor@users.sourceforge.net>
 
 	* ALL FILES: Replaced version 2 GPL notices with version 3 ones.
 
@@ -8,12 +21,13 @@
 
 	* configure.ac: Bumped version to 1.0.4.
 
-2008-01-25  Dale Mellor  <Dale Mellor <dale_mellor@users.sourceforge.net>
+
+2008-01-25  Dale Mellor <dale_mellor@users.sourceforge.net>
 
 	* main.scm (command-type): Files which are listed on the command
 	line are assumed to be guile configurations if they do not end in
 	.guile or .vixie (previously they were silently ignored).
-	
+
 	* main.scm: Argument to --schedule is no longer optional (the
 	options system goes really screwy with optional values, usually
 	pulling the first non-option argument as a value if one was not
@@ -24,9 +38,9 @@
 	AM_PROGS_CC_C_O in configure.ac (!)
 
 	* Version is currently at 1.0.3.
-	
 
-2005-09-02  hydro23  <Dale Mellor <dale_mellor@users.sourceforge.net>
+
+2005-09-02  Dale Mellor <dale_mellor@users.sourceforge.net>
 
 	* makefile.am, mcron.c.template (main): Modified install-exec-hook
 	so that a proper installation of a Vixie-compatible cron only
@@ -41,7 +55,7 @@
 	laptop awakes from suspend mode).
 
 	* Bumped version to 1.0.2.
-	
+
 
 2004-05-15  Dale Mellor <dale_mellor@users.sourceforge.net>
 
@@ -49,7 +63,7 @@
 	properly homed at www.gnu.org.
 
 	* Bumped version to 1.0.1.
-	
+
 
 2003-12-11  Dale Mellor <dale_mellor@users.sourceforge.net>
 
@@ -58,7 +72,7 @@
 
 	* Bumped version to 1.0.0.
 
-	
+
 2003-12-07  Dale Mellor <dale_mellor@users.sourceforge.net>
 
 	* configure.ac: Added switches for files and directories used by
@@ -67,24 +81,24 @@
 	these configure options (including the source for the texinfo
 	manual).
 
-	
+
 2003-12-05  Dale Mellor <dale_mellor@users.sourceforge.net>
 
 	* configure.ac: Added test for guile version >= 1.6.4.
 
 	* bumped version to 0.99.4.
 
-	
+
 2003-08-03  Dale Mellor <dale_mellor@users.sourceforge.net>
 
         * Third cut, fully functional, modular, production quality, still
 	needs testing...
-	
+
 	* Pulled all functionality into modules, so it can be incorporated
 	into other programs.
 
 	* Bumped version to 0.99.3.
-	
+
 
 2003-07-20  Dale Mellor <dale_mellor@users.sourceforge.net>
 
@@ -111,7 +125,7 @@
 
 	* Broken/incomplete Guile prevents vixie compatibility from
 	working - this has been disabled by default in the configuration.
-	
+
 	* Version set at 0.99.1
 
 
