--- a/NEWS
+++ b/NEWS
@@ -1,12 +1,34 @@
 Historic moments in the life of mcron.                        -*-text-*-
 
-Copyright (C) 2003, 2006 Dale Mellor
-See the end for copying conditions.
+  Copyright (C) 2003, 2005, 2006  Dale Mellor
+
+  Copying and distribution of this file, with or without modification,
+  are permitted in any medium without royalty provided the copyright
+  notice and this notice are preserved.
+
 
 Please send bug reports to bug-mcron@gnu.org.
 
 
-Thursday, 21st Februrary 2008
+Sunday, 20th June 2010
+
+    Standardized the copyright notices on all auxiliary files (including this
+    one!) according to the example set by the GNU hello program.  Removed
+    immutable end texts from the texinfo document.  These changes are required
+    for Debianization.  Released as version 1.0.6.
+
+
+Sunday, 13th June 2010
+
+    Made some technical changes to the build system to aid Debianization.
+    Released without announcement as version 1.0.5.
+
+    The GIT repository has been completely re-hashed, and now represents a
+    complete and faithful history of the package's development since its
+    inception.
+    
+
+Thursday, 21st February 2008
 
     The source code is now held in a GIT repository, at
     git://git.savannah.gnu.org/mcron.git.
@@ -75,18 +97,3 @@ Friday, 4th July 2003
     We have been accepted as a Savannah project. A CVS repository and web home
     page have been created. We're still waiting for acceptance as a GNU
     project.
-
-
-
-____________________________________________________________________________
-Copyright (C) 2003, 2006 Dale Mellor
-
-   Permission is granted to anyone to make or distribute verbatim copies
-   of this document as received, in any medium, provided that the
-   copyright notice and this permission notice are preserved,
-   thus giving the recipient permission to redistribute in turn.
-
-   Permission is granted to distribute modified versions
-   of this document, or of portions of it,
-   under the above conditions, provided also that they
-   carry prominent notices stating who last changed them.
