--- a/TODO
+++ b/TODO
@@ -1,5 +1,10 @@
-Copyright (C) 2003 Dale Mellor                             -*-text-*-
-See the end for copying conditions.
+GNU mcron --- TODO                                  -*-text-*-
+
+  Copyright (C) 2003, 2005, 2006  Dale Mellor
+
+  Copying and distribution of this file, with or without modification,
+  are permitted in any medium without royalty provided the copyright
+  notice and this notice are preserved.
 
 
 
@@ -41,17 +46,3 @@ May happen if version 2.0 ever materializes...
        crontab-like CGI personality.
 
     * GTK+/Bononbo/Gnome2 interface.
-    
-
-
-________________________________________________________________________________
-Copyright (C) 2003 Dale Mellor
-
-   Permission is granted to anyone to make or distribute verbatim copies of this
-   document as received, in any medium, provided that the copyright notice and
-   this permission notice are preserved, thus giving the recipient permission to
-   redistribute in turn.
-
-   Permission is granted to distribute modified versions of this document, or of
-   portions of it, under the above conditions, provided also that they carry
-   prominent notices stating who last changed them.
