--- a/ChangeLog
+++ b/ChangeLog
@@ -3,33 +3,10 @@
 	* configure.ac: Fix package name and bug reports email address.
 
 
-2015-06-27  Mathieu Lirzin  <mthl@openmailbox.org>
-
-	Use a more conventional build system.
-	* bootstrap: New convenient build script.
-	* README--git: Document it.
-	* makefile.am: Capitalize file name.
-	* makefile.ed: Likewise.
-	* scm/mcron/makefile: Likewise.
-	* Makefile.am: New file.
-	* Makefile.ed: Likewise.
-	* scm/mcron/Makefile: Likewise.
-	* .gitignore: Adapt to them.
-
-
 2015-06-26  Mathieu Lirzin  <mthl@openmailbox.org>
 
-	Fix build of the manual.
-	* mcron.texinfo.in: Move to ...
-	* doc/mcron.texi: ... Here.  New file.
-	* doc/config.texi.in: New file.
-	* configure.ac: Adapt to it.
-	* makefile.am: Likewise.
-	* .gitignore: Likewise.
-	* README--git: Likewise.
+	* Fix build of the manual.
 
-	Add missing 'makefile.am'.
-	* scm/mcron/makefile.am: New file.
 	* .gitignore: Ignore 'mcron' only in the top-level directory.
 
 
@@ -193,7 +170,7 @@
 
 
 ________________________________________________________________________________
-Copyright (C) 2003, 2005, 2006, 2014  Dale Mellor
+Copyright (C) 2003, 2005, 2006, 2014, 2015  Dale Mellor
 
 Copying and distribution of this file, with or without modification,
 are permitted in any medium without royalty provided the copyright
